--- a/app/src/main/res/drawable/listview_backgroundstate.xml
+++ b/app/src/main/res/drawable/listview_backgroundstate.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#aaaaaa">
+
     <item android:state_pressed="true" android:drawable="@android:color/transparent"/>
     <item android:state_selected="true" android:drawable="@android:color/transparent"/>
     <item android:state_focused="true" android:drawable="@android:color/transparent"/>
-    <item android:drawable="@drawable/listview4"/>
-</selector>
+    <item android:drawable="@drawable/my_rect"/>
+</ripple>
