--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -9,13 +9,11 @@
         android:id="@+id/listview_home"
         android:layout_width="match_parent"
         android:listSelector="@drawable/custom_listview_selector"
+        android:background="#efefef"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
         android:divider="@android:color/transparent"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
         android:dividerHeight="10.0sp">
     </ListView>
 
