--- a/app/src/main/res/layout/row_lan.xml
+++ b/app/src/main/res/layout/row_lan.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:paddingTop="5dp"
-    android:background="@drawable/listview_backgroundstate"
     android:paddingBottom="5dp"
+    android:background="@drawable/listview_backgroundstate"
+    android:outlineProvider="bounds"
+    android:elevation="2dp"
     android:paddingStart="30dp"
     android:paddingEnd="30dp">
 
