--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,6 @@
     <color name="snackbar_warning">#e64545</color>
     <color name="banner">#333c70</color>
     <color name="light_grey">#dfdede</color>
-    <color name="pressed_state">#dadada</color>
+    <color name="pressed_state">#dedede</color>
     <color name="tab_background">#9fa8da</color>
 </resources>
