--- a/app/src/main/res/drawable/listview_backgroundstate.xml
+++ b/app/src/main/res/drawable/listview_backgroundstate.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#aaaaaa">
+    android:color="@color/pressed_state">
 
     <item android:state_pressed="true" android:drawable="@android:color/transparent"/>
     <item android:state_selected="true" android:drawable="@android:color/transparent"/>
