--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -9,10 +9,13 @@
         android:id="@+id/listview_home"
         android:layout_width="match_parent"
         android:listSelector="@drawable/custom_listview_selector"
+        android:clipToPadding="false"
         android:background="#efefef"
         android:layout_height="match_parent"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp">
     </ListView>
