--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:theme="@style/Theme.AppCompat.NoActionBar"
+    android:theme="@style/Theme.AppCompat.NoActionBar"
     tools:context="com.example.emile1.findaparty.Activity.SearchFragment">
 
     <com.google.android.gms.maps.MapView
