--- a/app/src/main/res/layout/fragment_archive.xml
+++ b/app/src/main/res/layout/fragment_archive.xml
@@ -10,4 +10,11 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        android:layout_gravity="center_horizontal"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </FrameLayout>
