--- a/app/src/main/res/layout/activity_dispatch.xml
+++ b/app/src/main/res/layout/activity_dispatch.xml
@@ -8,6 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emile1.findaparty.Activity.DispatchActivity">
+    tools:context="com.example.emile1.findaparty.Activity.Activity.DispatchActivity">
 
 </RelativeLayout>
