--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.emile1.findaparty.Activity.Login"
+    tools:context="com.example.emile1.findaparty.Activity.Activity.Login"
     android:elevation="1dp"
     android:theme="@style/Theme.App.Base">
 
