--- a/app/src/main/res/layout/activity_my_lan_details.xml
+++ b/app/src/main/res/layout/activity_my_lan_details.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_my_lan_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.emile1.findaparty.Activity.MyLanDetailsActivity">
+    tools:context="com.example.emile1.findaparty.Activity.Activity.MyLanDetailsActivity">
 
     <include
         layout="@layout/app_bar_main"
