--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/Theme.App.Base"
     android:orientation="vertical"
-    tools:context="com.example.emile1.findaparty.Activity.Password"
+    tools:context="com.example.emile1.findaparty.Activity.Activity.Password"
     android:weightSum="1">
     <TextView
         android:id="@+id/passwordResetLabel"
