--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="40dp"
             android:orientation="vertical"
-            tools:context="com.example.emile1.findaparty.Activity.Register">
+            tools:context="com.example.emile1.findaparty.Activity.Activity.Register">
 
             <TextView
                 android:id="@+id/firstName_label"
