--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/Theme.AppCompat.NoActionBar"
-    tools:context="com.example.emile1.findaparty.Activity.SearchFragment">
+    tools:context="com.example.emile1.findaparty.Activity.fragment.SearchFragment">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
