--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@mipmap/login_background"
     tools:context="com.example.emile1.findaparty.Activity.Activity.Login"
     android:elevation="1dp"
     android:theme="@style/Theme.App.Base">
@@ -20,9 +21,9 @@
         android:layout_marginTop="200dp"
         android:layout_alignParentStart="true"
         android:text="@string/email_label"
-        android:textColor="@color/textViews"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/font_size_textview"
-        android:paddingLeft="15dp"/>
+        android:paddingStart="15dp"/>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -41,7 +42,7 @@
             android:inputType="textEmailAddress"
             android:hint="@string/email_hint"
             android:textSize="@dimen/font_size_edittext"
-            android:textColorHint="@color/editTexts" />
+            android:textColorHint="@android:color/white" />
     </android.support.design.widget.TextInputLayout>
 
 
@@ -52,7 +53,7 @@
         android:layout_below="@id/emailLoginLayout"
         android:text="@string/password_label"
         android:textSize="@dimen/font_size_textview"
-        android:textColor="@color/textViews"
+        android:textColor="@android:color/white"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:paddingTop="15dp"/>
@@ -74,7 +75,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/password_hint_login"
             android:textSize="@dimen/font_size_edittext"
-            android:textColorHint="@color/editTexts"
+            android:textColorHint="@android:color/white"
             android:inputType="textPassword"
             android:elevation="1dp" />
     </android.support.design.widget.TextInputLayout>
