--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        android:background="@android:color/white"
-        app:itemTextColor="@color/color_selector_navigation_item"
-        app:itemIconTint="@color/color_selector_navigation_item"
+        android:background="@color/color_navigation_list_background"
+        app:itemTextColor="@android:color/white"
+        app:itemIconTint="@android:color/white"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" >
 
