--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,35 +4,48 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_main"
-            android:icon="@drawable/ic_home_black_24dp"
-            android:title="@string/nav_home"/>
-        <item
-            android:id="@+id/nav_search"
-            android:icon="@drawable/ic_search_black_24dp"
-            android:title="@string/nav_search" />
-        <item
-            android:id="@+id/nav_create"
-            android:icon="@drawable/ic_create_black_24dp"
-            android:title="@string/nav_create" />
+            android:title="Menu"
+            android:id="@+id/menu">
+            <menu>
+                <item
+                    android:id="@+id/nav_main"
+                    android:icon="@drawable/ic_home_black_24dp"
+                    android:title="@string/nav_home"/>
+                <item
+                    android:id="@+id/nav_search"
+                    android:icon="@drawable/ic_search_black_24dp"
+                    android:title="@string/nav_search" />
+                <item
+                    android:id="@+id/nav_create"
+                    android:icon="@drawable/ic_create_black_24dp"
+                    android:title="@string/nav_create" />
 
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_settings"
-            android:title="@string/nav_settings" />
+                <item
+                    android:id="@+id/nav_settings"
+                    android:icon="@drawable/ic_settings"
+                    android:title="@string/nav_settings" />
+            </menu>
+
+        </item>
+
     </group>
 
-    <item android:title="">
-        <menu>
-            <item
-                />
-            <item
-                />
-            <item
-                android:id="@+id/nav_logOut"
-                android:icon="@drawable/logout"
-                android:title="@string/nav_logout" />
-        </menu>
-    </item>
+    <group android:id="@+id/log_out">
+        <item
+            android:title=""
+            android:checkable="false"
+            android:enabled="false">
+
+        </item>
+        <item
+            android:title=""
+            android:checkable="false"
+            android:enabled="false">
+            </item>
+        <item
+            android:id="@+id/nav_logOut"
+            android:icon="@drawable/logout"
+            android:title="@string/nav_logout" />
+    </group>
 
 </menu>
