--- a/app/src/main/res/drawable/list_selector_pressed.xml
+++ b/app/src/main/res/drawable/list_selector_pressed.xml
@@ -1,3 +1,4 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <solid android:color="@color/pressed_state"/>
 </shape>
