--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         app:backgroundTint="@color/buttonLoginColor"
+        android:elevation="5dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
         android:layout_width="wrap_content"
