--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,13 +13,15 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        app:backgroundTint="@color/buttonLoginColor"
-        android:elevation="5dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_marginEnd="30dp"
+        android:elevation="24dp"
+        app:backgroundTint="@color/buttonLoginColor"
+        app:borderWidth="0dp"
+        app:elevation="6dp" />
 
 </RelativeLayout>
