--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:background="@android:color/white"
-        android:elevation="0dp"
+        android:elevation="1dp"
         app:behavior_hideable="true"
         app:behavior_peekHeight="0dp"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
@@ -34,32 +34,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <TextView
                 android:id="@+id/text_bottom_sheet"
                 android:text="Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textColor="@color/buttonLoginColor"
+                android:layout_width="94dp"
+                android:layout_height="58dp" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_margin="15dp"
+        app:layout_anchor="@id/bottom_sheet"
+        app:layout_anchorGravity="top|end"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginEnd="30dp"
         app:backgroundTint="@color/buttonLoginColor"
         app:borderWidth="0dp"
         app:elevation="6dp"
-        app:layout_anchor="@id/bottom_sheet"
-        app:layout_anchorGravity="top|end" />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab2"
-        app:layout_anchor="@id/floatingButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:layout_anchor="@id/fab2"
+        app:layout_anchorGravity="top"/>
 
 </android.support.design.widget.CoordinatorLayout>
