--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -17,7 +17,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-
     </RelativeLayout>
 
     <android.support.v4.widget.NestedScrollView
@@ -28,7 +27,7 @@
         android:elevation="1dp"
         app:behavior_hideable="true"
         app:behavior_peekHeight="0dp"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+        app:layout_behavior="@string/bottom_sheet_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
