--- a/app/src/main/res/layout/row_lan.xml
+++ b/app/src/main/res/layout/row_lan.xml
@@ -1,89 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rl_row_lan"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/listview_backgroundstate"
-    android:elevation="2dp"
-    android:outlineProvider="bounds"
-    android:paddingBottom="5dp"
-    android:paddingEnd="30dp"
-    android:paddingStart="30dp"
-    android:paddingTop="5dp">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="3dp" >
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date"
-        android:textStyle="bold" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/rl_row_lan"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/listview_backgroundstate"
+        android:elevation="2dp"
+        android:outlineProvider="bounds"
+        android:paddingBottom="5dp"
+        android:paddingEnd="30dp"
+        android:paddingStart="30dp"
+        android:paddingTop="5dp">
 
-    <TextView
-        android:id="@+id/textViewStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/date"
-        android:layout_marginTop="5dp"
-        android:text="Start : " />
-    <TextView
-        android:id="@+id/startTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/textViewStart"
-        android:layout_toEndOf="@id/textViewStart"
-        android:text="hello"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/textViewEnd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textViewStart"
-        android:layout_marginTop="5dp"
-        android:text="End : " />
-    <TextView
-        android:id="@+id/endTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/textViewEnd"
-        android:layout_toEndOf="@id/textViewEnd"
-        android:text="End"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/textViewMaxPlaces"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@id/textViewStart"
-        android:layout_marginEnd="30dp"
-        android:text="Max People :" />
-    <TextView
-        android:id="@+id/maxSpots"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@id/textViewStart"
-        android:text="3"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/textViewParticipant"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@id/textViewEnd"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/textViewMaxPlaces"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="5dp"
-        android:text="Participants : " />
-    <TextView
-        android:id="@+id/participants"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@id/textViewParticipant"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/textViewMaxPlaces"
-        android:layout_marginTop="5dp"
-        android:text="4"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date"
+            android:textStyle="bold" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/textViewStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/date"
+            android:layout_marginTop="5dp"
+            android:text="Start : " />
+        <TextView
+            android:id="@+id/startTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/textViewStart"
+            android:layout_toEndOf="@id/textViewStart"
+            android:text="hello"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textViewEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewStart"
+            android:layout_marginTop="5dp"
+            android:text="End : " />
+        <TextView
+            android:id="@+id/endTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/textViewEnd"
+            android:layout_toEndOf="@id/textViewEnd"
+            android:text="End"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textViewMaxPlaces"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@id/textViewStart"
+            android:layout_marginEnd="30dp"
+            android:text="Max People :" />
+        <TextView
+            android:id="@+id/maxSpots"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignTop="@id/textViewStart"
+            android:text="3"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textViewParticipant"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/textViewEnd"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/textViewMaxPlaces"
+            android:layout_marginEnd="30dp"
+            android:layout_marginTop="5dp"
+            android:text="Participants : " />
+        <TextView
+            android:id="@+id/participants"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/textViewParticipant"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/textViewMaxPlaces"
+            android:layout_marginTop="5dp"
+            android:text="4"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
