--- a/app/src/main/res/layout/row_lan.xml
+++ b/app/src/main/res/layout/row_lan.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
-    app:cardCornerRadius="3dp" >
+    app:cardCornerRadius="2dp" >
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/rl_row_lan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/listview_backgroundstate"
-        android:elevation="2dp"
-        android:outlineProvider="bounds"
         android:paddingBottom="5dp"
         android:paddingEnd="30dp"
         android:paddingStart="30dp"
@@ -22,6 +20,8 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAllCaps="true"
+            android:textSize="18dp"
             android:text="Date"
             android:textStyle="bold" />
 
