--- a/app/src/main/res/drawable/listview_backgroundstate.xml
+++ b/app/src/main/res/drawable/listview_backgroundstate.xml
@@ -5,5 +5,5 @@
     <item android:state_pressed="true" android:drawable="@android:color/transparent"/>
     <item android:state_selected="true" android:drawable="@android:color/transparent"/>
     <item android:state_focused="true" android:drawable="@android:color/transparent"/>
-    <item android:drawable="@android:color/white"/>
+    <item android:drawable="@android:color/transparent"/>
 </ripple>
