--- a/app/src/main/res/layout/row_lan.xml
+++ b/app/src/main/res/layout/row_lan.xml
@@ -9,7 +9,7 @@
     android:layout_margin="5dp"
     app:cardCornerRadius="2dp" >
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:id="@+id/rl_row_lan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,77 +22,93 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Date"
             android:textAllCaps="true"
             android:textSize="18dp"
-            android:text="Date"
             android:textStyle="bold" />
 
-        <TextView
+        <ImageView
             android:id="@+id/textViewStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/date"
-            android:layout_marginTop="5dp"
-            android:text="Start : " />
+            android:layout_marginBottom="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/ic_cardview_time" />
+
         <TextView
             android:id="@+id/startTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/textViewStart"
+            android:layout_marginTop="3dp"
             android:layout_toEndOf="@id/textViewStart"
             android:text="hello"
             android:textStyle="bold" />
-        <TextView
-            android:id="@+id/textViewEnd"
+
+        <ImageView
+            android:id="@+id/dots"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewStart"
+            android:background="@drawable/ic_dots_24dp" />
+
+        <ImageView
+            android:id="@+id/textViewEnd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dots"
+            android:layout_marginEnd="5dp"
             android:layout_marginTop="5dp"
-            android:text="End : " />
+            android:background="@drawable/ic_cardview_time" />
+
         <TextView
             android:id="@+id/endTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/textViewEnd"
+            android:layout_marginTop="3dp"
             android:layout_toEndOf="@id/textViewEnd"
             android:text="End"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/textViewMaxPlaces"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignTop="@id/textViewStart"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="30dp"
             android:text="Max People :" />
+
         <TextView
             android:id="@+id/maxSpots"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignTop="@id/textViewStart"
+            android:layout_alignTop="@id/dots"
+            android:layout_centerVertical="true"
             android:text="3"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/textViewParticipant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@id/textViewEnd"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/textViewMaxPlaces"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="5dp"
+            android:layout_above="@+id/endTime"
+            android:layout_alignStart="@+id/textViewMaxPlaces"
             android:text="Participants : " />
+
         <TextView
             android:id="@+id/participants"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@id/textViewParticipant"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/textViewMaxPlaces"
             android:layout_marginTop="5dp"
             android:text="4"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_above="@id/endTime"
+            android:layout_alignStart="@+id/maxSpots" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
