--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -53,7 +53,7 @@
                 android:layout_toEndOf="@id/circle_picture"
                 android:layout_marginStart="10dp"
                 android:textColor="@color/btn_create"
-                android:text="39 rue maréchal foch"
+                android:text=""
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </RelativeLayout>
@@ -72,8 +72,9 @@
         android:id="@+id/floatingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="15dp"
         android:layout_marginBottom="50dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="15dp"
         app:backgroundTint="@color/buttonLoginColor"
         app:borderWidth="0dp"
         app:elevation="6dp"
